--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "index.ts",
   "devDependencies": {
     "concurrently": "^9.2.0",
+    "serve": "^14.2.4",
     "typescript": "^5.8.3",
     "vite": "^7.0.6"
   },
