--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev-tsc": "npm run tsc -- --noEmit --watch",
     "tsc": "tsc --lib es2015,dom index.ts",
     "build": "npm run build-tsc",
-    "build-tsc": "rm dist/* && npm run tsc -- --declaration true --outDir dist",
+    "build-tsc": "rm dist/* && npm run tsc -- --declaration true --outDir dist --sourceMap true",
     "build-vite": "vite build test",
     "release-major": "npm version major && npm run release-post-npm-version",
     "release-minor": "npm version minor && npm run release-post-npm-version",
